--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 #requirements.txt
 snowflake-connecter-python
-cffi==1.15.0
-pyarrow<8.1.0,>=8.0.0
-streamlit >= 1.9.2
+charset-normalizer==2.0.12
+snowflake-connector-python==2.7.9
